--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -4,8 +4,12 @@
 
 <div class="row-fluid post-full">
   <div class="span12">
-    <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
+    <div class="meta">
+      <span class="key">Author:</span>
+      <span class="value"><a href="{{page.author_url}}">{{ page.author }}</a></span>
+      <br>
+      <span class="key">Date:</span>
+      <span class="value">{{ page.date | date_to_long_string }}</span>
     </div>
     <div class="content">
       {{ content }}
